tests/fail/encap_access.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// tests/reject/fail_encap_access.tk
import tests/import_test/encap_lib::Data

fn main() -> i32 {
    auto d = Data(
        public_val = 1,
        private_val = 2
    )
    
    // This should fail: private_val is not public in encap_lib.tk
    auto x = d.private_val
    // EXPECT: error[E0418]: 'encap' is not implemented for type 'Data'
    return 0
}
